# roboy_dep

./: CMakeLists.txt  package.xml
include/roboy_DEP/: DEP.hpp  DerMartiusController.h  inspectable.h
include/roboy_dep/: DEP.hpp  DerMartiusController.h  inspectable.h  matrix.h  stl_adds.h
msg/: brain_id.msg  cArray.msg  depMatrix.msg  depParameters.msg  transition.msg  transition_direction.msg  transition_start.msg  trigger_ref.msg
src/: DEP.cpp  DerMartiusController.cpp  dep_interface.cpp  inspectable.cpp  main.cpp  matrix.cpp  stl_adds.cpp
