<?xml version="1.0"?>
<package>
  <name>roboy_DEP</name>
  <version>0.1.0</version>
  <description>DEP</description>
  <maintainer email="orpana.markus@gmail.com">Markus Orpana</maintainer>
  <author>Markus Orpana</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>roboy_managing_node</build_depend>
  <build_depend>roboy_communication_middleware</build_depend>
  <build_depend>roboy_realsense</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>common_utilities</build_depend>

  <run_depend>roboy_managing_node</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>roboy_communication_middleware</run_depend>
  <run_depend>roboy_realsense</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>common_utilities</run_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


</package>